--- a/Parsing_Sefaria_Jastrow_Dictionary_XML_File_for_Greek_loanword_entries_11_Feb_25.ipynb
+++ b/Parsing_Sefaria_Jastrow_Dictionary_XML_File_for_Greek_loanword_entries_11_Feb_25.ipynb
@@ -1,1 +1,281 @@
-Parsing_Sefaria_Jastrow_Dictionary_XML_File_for_Greek_loanword_entries_11_Feb_25.ipynb
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMAbyLFUq9b2D+VvT/ygABz",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/EzraBrand/DOM-manipulation-manipulating-text/blob/master/Parsing_Sefaria_Jastrow_Dictionary_XML_File_for_Greek_loanword_entries_11_Feb_25.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jzmSNmdeMJWF"
+      },
+      "outputs": [],
+      "source": [
+        "import requests\n",
+        "import xml.etree.ElementTree as ET\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "import io\n",
+        "\n",
+        "# Download and parse XML\n",
+        "url = \"https://raw.githubusercontent.com/Sefaria/Sefaria-Data/947c1b91684df9f8b92f14cf0d281b5d4f29bfc7/dictionaries/Jastrow/data/01-Merged%20XML/Jastrow-full.xml\"\n",
+        "response = requests.get(url)\n",
+        "xml_content = response.content\n",
+        "tree = ET.parse(io.BytesIO(xml_content))\n",
+        "root = tree.getroot()\n",
+        "\n",
+        "def has_greek_content(text):\n",
+        "    patterns = [\n",
+        "        r'[αβγδεζηθικλμνξοπρστυφχψω]',\n",
+        "        r'(?i)greek',\n",
+        "        r'(?i)gr\\.',\n",
+        "        r'\\([^)]*(?:ος|ον|ης|ευ|ιος|ια|ιον)[^)]*\\)',\n",
+        "        r'\\b(?:ος|ον|ης|ευ|ιος|ια|ιον)\\b',\n",
+        "        r'(?i)(?:thrac|hellenic|byzantin)',\n",
+        "        r'(?i)(?:europ|macedon)'\n",
+        "    ]\n",
+        "    return any(re.search(pattern, text, re.IGNORECASE | re.UNICODE) for pattern in patterns)\n",
+        "\n",
+        "def clean_text(text):\n",
+        "    if text is None:\n",
+        "        return \"\"\n",
+        "    # Clean text and handle equal signs at start\n",
+        "    cleaned = ' '.join(text.replace('\\t', ' ').split())\n",
+        "    if cleaned.startswith('='):\n",
+        "        cleaned = \"'\" + cleaned\n",
+        "    return cleaned\n",
+        "\n",
+        "def extract_greek_form(text):\n",
+        "    patterns = [\n",
+        "        r'\\(([^)]*?(?:α|β|γ|δ|ε|ζ|η|θ|ι|κ|λ|μ|ν|ξ|ο|π|ρ|σ|τ|υ|φ|χ|ψ|ω)[^)]*?)\\)',\n",
+        "        r'(?:Greek|Gr\\.)[:\\s]+([^.,;\\[\\]]+)',\n",
+        "        r'\\b(\\w+(?:ος|ον|ης|ευ|ιος|ια|ιον))\\b',\n",
+        "        r'([^\\s(),;]+?(?:α|β|γ|δ|ε|ζ|η|θ|ι|κ|λ|μ|ν|ξ|ο|π|ρ|σ|τ|υ|φ|χ|ψ|ω)[^\\s(),;]*)'\n",
+        "    ]\n",
+        "\n",
+        "    greek_forms = []\n",
+        "    for pattern in patterns:\n",
+        "        matches = re.finditer(pattern, text, re.UNICODE)\n",
+        "        for match in matches:\n",
+        "            greek_form = match.group(1).strip()\n",
+        "            if any(c in greek_form for c in 'αβγδεζηθικλμνξοπρστυφχψω'):\n",
+        "                greek_forms.append(greek_form)\n",
+        "    return greek_forms\n",
+        "\n",
+        "def remove_greek_content(text, greek_forms):\n",
+        "    \"\"\"Remove Greek forms and their parenthetical contexts from text\"\"\"\n",
+        "    cleaned_text = text\n",
+        "    for greek_form in greek_forms:\n",
+        "        # Remove the Greek form and its surrounding parentheses\n",
+        "        cleaned_text = re.sub(r'\\([^)]*' + re.escape(greek_form) + r'[^)]*\\)', '', cleaned_text)\n",
+        "        # Remove the bare Greek form\n",
+        "        cleaned_text = cleaned_text.replace(greek_form, '')\n",
+        "\n",
+        "    # Clean up any resulting double spaces or empty parentheses\n",
+        "    cleaned_text = re.sub(r'\\(\\s*\\)', '', cleaned_text)\n",
+        "    cleaned_text = re.sub(r'\\s+', ' ', cleaned_text)\n",
+        "    return cleaned_text.strip()\n",
+        "\n",
+        "def extract_greek_loanwords():\n",
+        "    entries = []\n",
+        "\n",
+        "    for entry in root.findall('.//entry'):\n",
+        "        entry_text = ' '.join(entry.itertext()).strip()\n",
+        "\n",
+        "        if has_greek_content(entry_text):\n",
+        "            headword_elem = entry.find('head-word')\n",
+        "            headword = clean_text(headword_elem.text) if headword_elem is not None else ''\n",
+        "\n",
+        "            definition = \"\"\n",
+        "            notes = \"\"\n",
+        "            all_greek_forms = set()\n",
+        "\n",
+        "            senses_elem = entry.find('senses')\n",
+        "            if senses_elem is not None:\n",
+        "                for sense in senses_elem.findall('sense'):\n",
+        "                    def_elem = sense.find('definition')\n",
+        "                    if def_elem is not None:\n",
+        "                        def_text = clean_text(' '.join(def_elem.itertext()))\n",
+        "                        greek_forms = extract_greek_form(def_text)\n",
+        "                        all_greek_forms.update(greek_forms)\n",
+        "                        definition += remove_greek_content(def_text, greek_forms) + ' '\n",
+        "\n",
+        "                    notes_elem = sense.find('notes')\n",
+        "                    if notes_elem is not None:\n",
+        "                        notes_text = clean_text(' '.join(notes_elem.itertext()))\n",
+        "                        greek_forms = extract_greek_form(notes_text)\n",
+        "                        all_greek_forms.update(greek_forms)\n",
+        "                        notes += remove_greek_content(notes_text, greek_forms) + ' '\n",
+        "\n",
+        "            entries.append([\n",
+        "                entry.get('id', ''),\n",
+        "                headword,\n",
+        "                '; '.join(all_greek_forms),\n",
+        "                clean_text(definition),\n",
+        "                clean_text(notes)\n",
+        "            ])\n",
+        "\n",
+        "    return entries\n",
+        "\n",
+        "# Extract entries and create output\n",
+        "entries = extract_greek_loanwords()\n",
+        "\n",
+        "# Print headers and data in tab-separated format\n",
+        "print(f\"Total entries found: {len(entries)}\\n\")\n",
+        "print(\"ID\\tHebrew/Aramaic\\tGreek\\tDefinition\\tNotes\")\n",
+        "for entry in entries[:2000]:  # First 10 entries\n",
+        "    print('\\t'.join(entry))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greek_to_latin(greek_text):\n",
+        "    \"\"\"Transliterate Greek to standard Latin characters\"\"\"\n",
+        "    def transliterate_word(word):\n",
+        "        # First handle diphthongs by direct replacement\n",
+        "        replacements = [\n",
+        "            ('ευ', 'eu'), ('εύ', 'eu'), ('εὐ', 'eu'), ('εὺ', 'eu'), ('εὔ', 'eu'),\n",
+        "            ('αυ', 'au'), ('αύ', 'au'), ('αὐ', 'au'), ('αὺ', 'au'), ('αὔ', 'au'),\n",
+        "            ('Ευ', 'Eu'), ('Εύ', 'Eu'), ('Εὐ', 'Eu'), ('Εὺ', 'Eu'), ('Εὔ', 'Eu'),\n",
+        "            ('Αυ', 'Au'), ('Αύ', 'Au'), ('Αὐ', 'Au'), ('Αὺ', 'Au'), ('Αὔ', 'Au'),\n",
+        "            ('ου', 'ou'), ('ού', 'ou'), ('οὐ', 'ou'), ('οὺ', 'ou'), ('οὔ', 'ou'),\n",
+        "            ('αι', 'ai'), ('αί', 'ai'), ('αἰ', 'ai'), ('αὶ', 'ai'), ('αὔ', 'ai'),\n",
+        "            ('ει', 'ei'), ('εί', 'ei'), ('εἰ', 'ei'), ('εὶ', 'ei'), ('εὔ', 'ei'),\n",
+        "            ('οι', 'oi'), ('οί', 'oi'), ('οἰ', 'oi'), ('οὶ', 'oi'), ('οὔ', 'oi'),\n",
+        "        ]\n",
+        "\n",
+        "        for greek, latin in replacements:\n",
+        "            word = word.replace(greek, latin)\n",
+        "\n",
+        "        # Then handle individual characters\n",
+        "        char_map = {\n",
+        "            'α': 'a', 'ά': 'a', 'ὰ': 'a', 'ἀ': 'a', 'ἁ': 'ha', 'ᾶ': 'a', 'ᾴ': 'a', 'ᾳ': 'a',\n",
+        "            'β': 'b',\n",
+        "            'γ': 'g',\n",
+        "            'δ': 'd',\n",
+        "            'ε': 'e', 'έ': 'e', 'ὲ': 'e', 'ἐ': 'e', 'ἑ': 'he', 'ἔ': 'e', 'ἕ': 'he',\n",
+        "            'ζ': 'z',\n",
+        "            'η': 'ē', 'ή': 'ē', 'ὴ': 'ē', 'ἠ': 'ē', 'ἡ': 'hē', 'ῆ': 'ē', 'ῃ': 'ē',\n",
+        "            'θ': 'th',\n",
+        "            'ι': 'i', 'ί': 'i', 'ὶ': 'i', 'ἰ': 'i', 'ἱ': 'hi', 'ῖ': 'i',\n",
+        "            'κ': 'k',\n",
+        "            'λ': 'l',\n",
+        "            'μ': 'm',\n",
+        "            'ν': 'n',\n",
+        "            'ξ': 'x',\n",
+        "            'ο': 'o', 'ό': 'o', 'ὸ': 'o', 'ὀ': 'o', 'ὁ': 'ho', 'ὄ': 'o', 'ὅ': 'ho',\n",
+        "            'π': 'p',\n",
+        "            'ρ': 'r', 'ῥ': 'rh',\n",
+        "            'σ': 's', 'ς': 's',\n",
+        "            'τ': 't',\n",
+        "            'υ': 'y', 'ύ': 'y', 'ὺ': 'y', 'ὐ': 'y', 'ὑ': 'hy', 'ὔ': 'y',\n",
+        "            'φ': 'ph',\n",
+        "            'χ': 'ch',\n",
+        "            'ψ': 'ps',\n",
+        "            'ω': 'ō', 'ώ': 'ō', 'ὼ': 'ō', 'ὠ': 'ō', 'ὡ': 'hō', 'ῶ': 'ō',\n",
+        "            # Capital letters with variants\n",
+        "            'Α': 'A', 'Ά': 'A', 'Ἀ': 'A', 'Ἁ': 'Ha',\n",
+        "            'Β': 'B',\n",
+        "            'Γ': 'G',\n",
+        "            'Δ': 'D',\n",
+        "            'Ε': 'E', 'Έ': 'E', 'Ἐ': 'E', 'Ἑ': 'He',\n",
+        "            'Ζ': 'Z',\n",
+        "            'Η': 'Ē', 'Ή': 'Ē',\n",
+        "            'Θ': 'Th',\n",
+        "            'Ι': 'I', 'Ί': 'I',\n",
+        "            'Κ': 'K',\n",
+        "            'Λ': 'L',\n",
+        "            'Μ': 'M',\n",
+        "            'Ν': 'N',\n",
+        "            'Ξ': 'X',\n",
+        "            'Ο': 'O', 'Ό': 'O',\n",
+        "            'Π': 'P',\n",
+        "            'Ρ': 'R',\n",
+        "            'Σ': 'S',\n",
+        "            'Τ': 'T',\n",
+        "            'Υ': 'Y', 'Ύ': 'Y',\n",
+        "            'Φ': 'Ph',\n",
+        "            'Χ': 'Ch',\n",
+        "            'Ψ': 'Ps',\n",
+        "            'Ω': 'Ō', 'Ώ': 'Ō'\n",
+        "        }\n",
+        "\n",
+        "        result = ''\n",
+        "        i = 0\n",
+        "        while i < len(word):\n",
+        "            char = word[i]\n",
+        "            if char in char_map:\n",
+        "                result += char_map[char]\n",
+        "            else:\n",
+        "                result += char\n",
+        "            i += 1\n",
+        "\n",
+        "        return result\n",
+        "\n",
+        "\n",
+        "    # Handle equal sign at start of string\n",
+        "    if greek_text.lstrip().startswith('='):\n",
+        "        greek_text = greek_text.replace('=', '', 1).lstrip()\n",
+        "\n",
+        "    # Split by whitespace and punctuation, preserving them\n",
+        "    parts = re.split(r'(\\s+|[.,;()])', greek_text)\n",
+        "    transliterated_parts = [transliterate_word(part) for part in parts]\n",
+        "    return ''.join(transliterated_parts)\n",
+        "\n",
+        "# Process the entries\n",
+        "processed_entries = []\n",
+        "for entry in entries:\n",
+        "    id_, hebrew, greek, definition, notes = entry\n",
+        "\n",
+        "    # Strip nikud from Hebrew/Aramaic\n",
+        "    clean_hebrew = strip_nikud(hebrew)\n",
+        "\n",
+        "    # Transliterate Greek and handle equal signs\n",
+        "    transliterated = greek_to_latin(greek) if greek else ''\n",
+        "    greek = clean_text(greek) if greek else ''\n",
+        "\n",
+        "    processed_entries.append([\n",
+        "        clean_hebrew,\n",
+        "        transliterated,\n",
+        "        greek,\n",
+        "        definition,\n",
+        "        notes\n",
+        "    ])\n",
+        "\n",
+        "# Print headers and data in tab-separated format\n",
+        "print(\"Hebrew/Aramaic\\tTransliterated\\tGreek\\tDefinition\\tEntry\")\n",
+        "for entry in processed_entries:\n",
+        "    print('\\t'.join(entry))"
+      ],
+      "metadata": {
+        "id": "DQ0_1kodXLi6"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
